<resources>
    <!-- Application -->
    <string name="app_name">Gojimo</string>
    <string name="activity_subject">Subject</string>

    <!-- Activities -->
    <string name="error_cause">The error cause is </string>
    <string name="activity_main_qualifications">Qualifications List</string>
    <string name="activity_subject_list_empty">Subject list is empty!</string>
    <string name="activity_subject_text">Subject List</string>
    <string name="menu_refresh">Refresh List</string>

    <!-- Qualifications -->
    <string name="adapter_qualifications_id">Id:</string>
    <string name="adapter_qualifications_name">Name:</string>
    <string name="adapter_qualifications_country">Country:</string>
    <string name="adapter_qualifications_subjects">Subjects:</string>
    <string name="adapter_qualifications_link">Link:</string>
    <string name="adapter_qualifications_default_products">Default Products:</string>

    <!-- Subject -->
    <string name="adapter_subject_id">Id:</string>
    <string name="adapter_subject_title">Title:</string>
    <string name="adapter_subject_link">Link:</string>

    <!-- Material Dialog -->
    <string name="progress_dialog">Loading Data</string>
    <string name="list_dialog">Showing Subjects</string>
    <string name="please_wait">Please wait&#8230;</string>
</resources>