<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent_dark"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/recycler_view_clicked"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/id_qualifications_id_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_id" />

        <TextView
            android:id="@+id/id_qualifications_name_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_name" />

        <TextView
            android:id="@+id/id_qualifications_country_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_country" />

        <TextView
            android:id="@+id/id_qualifications_subjects_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_subjects" />

        <TextView
            android:id="@+id/id_qualifications_link_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_link" />

        <TextView
            android:id="@+id/id_qualifications_default_products_text_view"
            style="@style/TextViewStyle"
            android:text="@string/adapter_qualifications_default_products" />
    </LinearLayout>
</LinearLayout>